--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Open+Sans:wght@300&family=Roboto:wght@100&family=Vazirmatn:wght@600&display=swap');
- 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap'); 
+
 body{
     background-image: url('./images/space.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-size: 100% 45%;
+    background-size: 100% 48%;
 }
 
 ul{
@@ -98,13 +99,14 @@ a{
 }
 
 .info-section img{
-    width: 95%;
+    width: 80%;
     border-radius: 20px;
+    margin-left: 5%;
 }
 
 .info-section article{
-    margin-top: 14%;
-    font-family: Roboto;
+    margin-top: 5%;
+    font-family: 'Open Sans', sans-serif;
     text-align: justify;
 }
 
