Cambiando el fondo

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     background-image: url('https://images.pexels.com/photos/7672881/pexels-photo-7672881.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
     background-repeat: no-repeat;
     background-size: cover;
+    background-size: 100% 40%;
 }
 
 a{
